--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/style/header.css">
+    <link rel="stylesheet" href="./assets/style/mainpage.css">
+
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <div class="header__logo">Bio with Mira</div>
+            <div class="header__container">
+            <div class="header__item1"><a href="#">Кто я?</a></div>
+            <div class="header__item2"><a href="#">Занятия со мной</a></div>
+            <div class="header__item1"><a href="#">Цены</a></div>
+            <div class="header__item4"><a href="#">Успехи учеников</a></div>
+        </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="mainpage">
+                <p class="mainpage__text">Мы просто сделаем это: 
+                    возьмем и подготовимся к ЕГЭ 
+                    на <span>80+</span></p>
+                <button class="mainpage__button">Попробовать бесплатно</button>
+                <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры" class="mainpage__photo"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
