--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/mainpage.css">
+    <link rel="stylesheet" href="./assets/style/tryforfree.css">
+    <link rel="stylesheet" href="./assets/style/footer.css">
 
 </head>
 <body>
@@ -37,6 +39,30 @@
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры" class="mainpage__photo"></div>
             </div>
         </section>
+    <section>
+        <div class="tryforfree">
+            
+            <div class="tryforfree__container">
+                <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
+                <p class="tryforfree__text1"><a href="#">Бесплатный онлайн курс<br>
+                    &nbsp &nbsp &nbsp “Деление клетки”</a></p>
+                <p class="tryforfree__text2"><a href="#">Конспекты, материалы, 
+                    пособия и многое другое в моем телеграм канале</a></p>
+                    <div class="tryforfree__photodiv"><img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo"></div>
+            </div>
+        </div>
+    </section>
     </main>
+    <footer>
+        <div class="footer">
+            <div class="footer__container">
+            <p href="#" class="footer__logo">Bio with Mira</p>
+            <a href="#"class="footer__a1">Кто я?</a>
+            <a href="#"class="footer__a2">Занятия со мной</a>
+            <a href="#"class="footer__a3">Цены</a>
+            <a  href="#"class="footer__a4">Успехи учеников</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
