занятия со мной

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/style/mainpage.css">
     <link rel="stylesheet" href="./assets/style/tryforfree.css">
     <link rel="stylesheet" href="./assets/style/footer.css">
+    <link rel="stylesheet" href="./assets/style/lessons.css">
 
 </head>
 <body>
@@ -37,6 +38,18 @@
                     на <span>80+</span></p>
                 <button class="mainpage__button">Попробовать бесплатно</button>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры" class="mainpage__photo"></div>
+            </div>
+        </section>
+        <section class="lessons">
+            <h2>Занятия со мной</h2>
+            <div class="lessons_img"><img src="./assets/images/lessons/platforma.png" alt="Платформа с теорией"></div>
+            <div class="lessons_text">
+                <ul>
+                    <li>Занятия онлайн в ZOOM</li>
+                    <li>Удобная платформа</li>
+                    <li>Онлайн домашние задание</li>
+                    <li>Поддержка от меня 24/7</li>
+                </ul>
             </div>
         </section>
     <section>
