--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./assets/style/tryforfree.css">
     <link rel="stylesheet" href="./assets/style/footer.css">
     <link rel="stylesheet" href="./assets/style/lessons.css">
+    <link rel="stylesheet" href="./assets/style/whoiam.css">
 
 </head>
 <body>
@@ -40,6 +41,28 @@
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры" class="mainpage__photo"></div>
             </div>
         </section>
+
+        <section class="whoiam">
+            <div class="whoiam__container">
+                <h2 class="whoiam__h2">Кто я?</h2>
+                <p class="whoiam__p1">Бакалавр биологии</br> 
+                    с отличием</p>
+                <p class="whoiam__p2">Аж 2(!) Научные работы</br> 
+                    по теме кардиологии</p>
+                    <img src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
+                <p class="whoiam__p3">Занималась биоинформатикой</br> 
+                    (собирала геномы)</p>
+                <p class="whoiam__p4">Закончила модуль по</br> 
+                    Иммунологии от кафедры МГУ</p>
+                <p class="whoiam__p5">Готовлю ребят к экзаменам</br> 
+                    уже больше 4 лет!</p>
+            </div>
+        </section>
+
+
+
+
+
         <section class="lessons">
             <h2>Занятия со мной</h2>
             <div class="lessons_img"><img src="./assets/images/lessons/platforma.png" alt="Платформа с теорией"></div>
