занятия со мной

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bio with Mira</title>
     <link rel="stylesheet" href="./assets/style/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,6 +77,17 @@
                     <li>Онлайн домашние задание</li>
                     <li>Поддержка от меня 24/7</li>
                 </ul>
+            </div>
+        </section>
+        <section class="lessons2"> 
+            <div class="video">
+                <h2>Фрагменты видео уроков</h2>
+            </div>
+            <div class="teoria">
+                <h2>Ёмкие и красочные конспекты</h2>
+                <div class="button_left"><a href="#"><img src="./assets/images/lessons/botton_left.png" alt="Влево"></a></div>
+                <div class="conspect"><img class="conspect_img" id="conspect" src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
+                <div class="button_right"><a href="#"><img src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
             </div>
         </section>
     <section>
