--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <main>
         <section>
             <div class="mainpage">
-                <p class="mainpage__text">Мы просто сделаем это: 
+                <h1 class="mainpage__text">Мы просто сделаем это: 
                     возьмем и подготовимся к ЕГЭ 
-                    на <span>80+</span></p>
+                    на <span>80+</span></h1>
                 <button class="mainpage__button">Попробовать бесплатно</button>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры" class="mainpage__photo"></div>
             </div>
@@ -96,10 +96,11 @@
             <div class="tryforfree__container">
                 <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
                 <p class="tryforfree__text1"><a href="#">Бесплатный онлайн курс<br>
-                    &nbsp &nbsp &nbsp “Деление клетки”</a></p>
+                    &nbsp &nbsp &nbsp «Деление клетки»</a></p>
                 <p class="tryforfree__text2"><a href="#">Конспекты, материалы, 
                     пособия и многое другое в моем телеграм канале</a></p>
-                    <div class="tryforfree__photodiv"><img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo"></div>
+                <p class="tryforfree__text3">Остались вопросы? Напиши мне!</p>
+                   <img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo">
             </div>
         </div>
     </section>
@@ -107,11 +108,20 @@
     <footer>
         <div class="footer">
             <div class="footer__container">
+                <div class="footer__container1">
             <p href="#" class="footer__logo">Bio with Mira</p>
             <a href="#"class="footer__a1">Кто я?</a>
             <a href="#"class="footer__a2">Занятия со мной</a>
             <a href="#"class="footer__a3">Цены</a>
             <a  href="#"class="footer__a4">Успехи учеников</a>
+        </div>
+            <div class="footer__container2">
+                <a  class="footer__a5" href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by dDara - Flaticon</a>
+                <a class="footer__a6" href="https://www.flaticon.com/free-icons/organ" title="organ icons">Organ icons created by Peerapak Takpho - Flaticon</a>
+                <a class="footer__a7" href="https://www.flaticon.com/ru/free-icons/" title="сердце иконки">Сердце иконки от Smashicons - Flaticon</a>
+                <p class="footer__p1">© Все права защищены.</p>
+                <p class="footer__p2">2022</p>
+            </div>
             </div>
         </div>
     </footer>
