--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./assets/style/footer.css">
     <link rel="stylesheet" href="./assets/style/lessons.css">
     <link rel="stylesheet" href="./assets/style/whoiam.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
 <body>
@@ -90,6 +91,46 @@
                 <div class="button_right"><a href="#"><img src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
             </div>
         </section>
+
+        <section>
+            <h2>Цены</h2>
+            <div class="container-fluid price-card">
+                <div class="d-flex row justify-content-evenly text-center rounded-5">
+
+                <div class="card-1 col-md-4 col-12 text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                    <h5 class="card-title price__h5">Индивидуальные</br> занятия</h5>
+                <div class="card-body">
+                    <img src="./assets/images/price/brain.svg" alt="мозг">
+                    <p class="card-text pt-3">2000 ₽ / 3000 ₽</br>60 мин / 90 мин</p>
+                </div>
+                </div>
+
+                <div class="card-2 col-md-4 col-12  text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                    <h5 class="card-title price__h5">Мини-группа</h5>
+                <div class="card-body">
+                    <img src="./assets/images/price/cell.svg" alt="биология">
+                    <p class="card-text pt-3">6900 ₽ </br>8 занятий</p>
+                </div>
+                </div>
+
+                <div class="card-3 col-md-4 col-12  text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                    <h5 class="card-title price__h5">Макси-группа</h5>             
+                    <div class="card-body">
+                        <img src="./assets/images/price/heart.svg" alt="сердце">
+                        <p class="card-text pt-3">3600 ₽ </br>8 занятий</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <button type="button" class="btn price__button1 btn-dark rounded-pill text-white">Записаться</button>
+            <button type="button" class="btn price__button2 btn-dark rounded-pill text-white">Записаться</button>
+            <button type="button" class="btn price__button3 btn-dark rounded-pill text-white">Записаться</button>
+        </section>
+
+
+
+
+
     <section>
         <div class="tryforfree">
             
@@ -125,5 +166,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+</body>
 </body>
 </html>
