--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./assets/style/footer.css">
     <link rel="stylesheet" href="./assets/style/lessons.css">
     <link rel="stylesheet" href="./assets/style/whoiam.css">
+    <link rel="stylesheet" href="./assets/style/price.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
@@ -93,38 +94,42 @@
         </section>
 
         <section>
-            <h2>Цены</h2>
+            <h2 class="price__h2">Цены</h2>
             <div class="container-fluid price-card">
                 <div class="d-flex row justify-content-evenly text-center rounded-5">
 
-                <div class="card-1 col-md-4 col-12 text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                <div class="card-1 col-md-4 col-12 text-white mb-5 mt-5 pt-4 pb-3" style="max-width: 18rem;">
                     <h5 class="card-title price__h5">Индивидуальные</br> занятия</h5>
                 <div class="card-body">
                     <img src="./assets/images/price/brain.svg" alt="мозг">
-                    <p class="card-text pt-3">2000 ₽ / 3000 ₽</br>60 мин / 90 мин</p>
+                    <p class="card-text price__text pt-3">2000 ₽ / 3000 ₽</br>60 мин / 90 мин</p>
                 </div>
                 </div>
 
-                <div class="card-2 col-md-4 col-12  text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                <div class="card-2 col-md-4 col-12  text-white mb-5 mt-5 pt-4 pb-3" style="max-width: 18rem;">
                     <h5 class="card-title price__h5">Мини-группа</h5>
                 <div class="card-body">
                     <img src="./assets/images/price/cell.svg" alt="биология">
-                    <p class="card-text pt-3">6900 ₽ </br>8 занятий</p>
+                    <p class="card-text price__text pt-3">6900 ₽ </br>8 занятий</p>
                 </div>
                 </div>
 
-                <div class="card-3 col-md-4 col-12  text-white bg-success mb-5 mt-5 pt-3 pb-3" style="max-width: 18rem;">
+                <div class="card-3 col-md-4 col-12  text-white mb-5 mt-5 pt-4 pb-3" style="max-width: 18rem;">
                     <h5 class="card-title price__h5">Макси-группа</h5>             
                     <div class="card-body">
                         <img src="./assets/images/price/heart.svg" alt="сердце">
-                        <p class="card-text pt-3">3600 ₽ </br>8 занятий</p>
+                        <p class="card-text price__text pt-3">3600 ₽ </br>8 занятий</p>
                     </div>
                 </div>
             </div>
             </div>
-            <button type="button" class="btn price__button1 btn-dark rounded-pill text-white">Записаться</button>
-            <button type="button" class="btn price__button2 btn-dark rounded-pill text-white">Записаться</button>
-            <button type="button" class="btn price__button3 btn-dark rounded-pill text-white">Записаться</button>
+            <div class="container-fluid price__buttons">
+                <div class="d-flex justify-content-evenly text-center mt-5">
+            <button type="button" class="price__button1 btn-dark rounded-pill text-white">Записаться</button>
+            <button type="button" class="price__button2 btn-dark rounded-pill text-white">Записаться</button>
+            <button type="button" class="price__button3 btn-dark rounded-pill text-white">Записаться</button>
+        </div>
+        </div>
         </section>
 
 
