--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="header">
             <div class="header__logo">Bio with Mira</div>
             <div class="header__container">
-            <div class="header__item1"><a href="#">Кто я?</a></div>
-            <div class="header__item2"><a href="#">Занятия со мной</a></div>
-            <div class="header__item1"><a href="#">Цены</a></div>
-            <div class="header__item4"><a href="#">Успехи учеников</a></div>
+            <div class="header__item1"><a href="#" class="link1">Кто я?</a></div>
+            <div class="header__item2"><a href="#" class="link1">Занятия со мной</a></div>
+            <div class="header__item1"><a href="#" class="link1">Цены</a></div>
+            <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
         </div>
         </div>
     </header>
@@ -141,11 +141,11 @@
             
             <div class="tryforfree__container">
                 <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
-                <p class="tryforfree__text1"><a href="#">Бесплатный онлайн курс<br>
+                <p class="tryforfree__text1"><a href="#" class="link2">Бесплатный онлайн курс<br>
                     &nbsp &nbsp &nbsp «Деление клетки»</a></p>
-                <p class="tryforfree__text2"><a href="#">Конспекты, материалы, 
+                <p class="tryforfree__text2"><a  href="#" class="link2">Конспекты, материалы, 
                     пособия и многое другое в моем телеграм канале</a></p>
-                <p class="tryforfree__text3">Остались вопросы? Напиши мне!</p>
+                <p class="tryforfree__text3"><a href="#" class="link2">Остались вопросы? Напиши мне!</a></p>
                    <img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo">
             </div>
         </div>
@@ -156,17 +156,17 @@
             <div class="footer__container">
                 <div class="footer__container1">
             <p href="#" class="footer__logo">Bio with Mira</p>
-            <a href="#"class="footer__a1">Кто я?</a>
-            <a href="#"class="footer__a2">Занятия со мной</a>
-            <a href="#"class="footer__a3">Цены</a>
-            <a  href="#"class="footer__a4">Успехи учеников</a>
+            <a href="#"class="footer__a1 link3">Кто я?</a>
+            <a href="#"class="footer__a2 link3">Занятия со мной</a>
+            <a href="#"class="footer__a3 link3">Цены</a>
+            <a  href="#"class="footer__a4 link3">Успехи учеников</a>
         </div>
             <div class="footer__container2">
-                <a  class="footer__a5" href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by dDara - Flaticon</a>
-                <a class="footer__a6" href="https://www.flaticon.com/free-icons/organ" title="organ icons">Organ icons created by Peerapak Takpho - Flaticon</a>
-                <a class="footer__a7" href="https://www.flaticon.com/ru/free-icons/" title="сердце иконки">Сердце иконки от Smashicons - Flaticon</a>
-                <p class="footer__p1">© Все права защищены.</p>
-                <p class="footer__p2">2022</p>
+                <a  class="footer__a5 link3" href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by dDara - Flaticon</a>
+                <a class="footer__a6 link3" href="https://www.flaticon.com/free-icons/organ" title="organ icons">Organ icons created by Peerapak Takpho - Flaticon</a>
+                <a class="footer__a7 link3"  href="https://www.flaticon.com/ru/free-icons/" title="сердце иконки">Сердце иконки от Smashicons - Flaticon</a>
+                <p class="footer__p1 link3">© Все права защищены.</p>
+                <p class="footer__p2 link3">2022</p>
             </div>
             </div>
         </div>
