--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section class="lessons">
             <h2>Занятия со мной</h2>
-            <div class="lessons_img"><img src="./assets/images/lessons/platforma.png" alt="Платформа с теорией"></div>
+            <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png" alt="Платформа с теорией"></div>
             <div class="lessons_text">
                 <ul>
                     <li>Занятия онлайн в ZOOM</li>
@@ -88,9 +88,9 @@
             </div>
             <div class="teoria">
                 <h2>Ёмкие и красочные конспекты</h2>
-                <div class="button_left"><a href="#"><img src="./assets/images/lessons/botton_left.png" alt="Влево"></a></div>
+                <div class="button_left" onclick="button_left()"><a><img src="./assets/images/lessons/botton_left.png" alt="Влево"></a></div>
                 <div class="conspect"><img class="conspect_img" id="conspect" src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
-                <div class="button_right"><a href="#"><img src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
+                <div class="button_right" onclick="button_right()"><a><img src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
             </div>
         </section>
 
@@ -174,6 +174,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script src="./assets/script/lessons_conspect"></script>
 </body>
 </body>
 </html>
