Кто я - мобильная версия

--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
                 <h2 class="whoiam__h2">Кто я?</h2>
                 <div class="whoiam__container">
                 <div class="whoiam__container2">
+                    <img src="./assets/images/whoiam/Ellipse.svg" alt="параграф">
                 <p class="whoiam__p1">Бакалавр биологии</br> 
                     с отличием</p>
+                    <img src="./assets/images/whoiam/Ellipse.svg" alt="параграф">
                 <p class="whoiam__p2">Аж 2(!) Научные работы</br> 
                     по теме кардиологии</p>
                     <img src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
                 </div>
                 <div class="whoiam__container3">
+                    <img src="./assets/images/whoiam/Ellipse.svg" alt="параграф">
                 <p class="whoiam__p3">Занималась биоинформатикой</br> 
                     (собирала геномы)</p>
+                    <img src="./assets/images/whoiam/Ellipse.svg" alt="параграф">
                 <p class="whoiam__p4">Закончила модуль по</br> 
                     Иммунологии от кафедры МГУ</p>
                 <p class="whoiam__p5">Готовлю ребят к экзаменам</br> 
