--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-< !DOCTYPE html>
+<!DOCTYPE html>
     <html lang="ru">
 
     <head>
@@ -35,6 +35,7 @@
                     <div class="header__item2"><a href="#" class="link1">Занятия со мной</a></div>
                     <div class="header__item1"><a href="#" class="link1">Цены</a></div>
                     <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
+                    <div class="header__item5"><a href="#" class="link1">Меню</a></div>
                 </div>
             </div>
         </header>
@@ -134,10 +135,15 @@
                         <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
                         <p class="tryforfree__text1"><a href="#" class="link2">Бесплатный онлайн курс<br>&nbsp &nbsp
                                 &nbsp «Деление клетки»</a></p>
+                                <p class="tryforfree__text1__mobile"><a href="#" class="link2">Бесплатный онлайн курс<br> «Деление клетки»</a></p>
                         <p class="tryforfree__text2"><a href="#" class="link2">Конспекты,
                                 материалы,
                                 пособия и многое другое в моем телеграм канале</a></p>
+                                <p class="tryforfree__text2__mobile"><a href="#" class="link2">Конспекты,
+                                    материалы, <br>
+                                    пособия и многое другое<br>в моем телеграм канале</a></p>
                         <p class="tryforfree__text3"><a href="#" class="link2">Остались вопросы? Напиши мне !</a></p>
+                        <p class="tryforfree__text3__mobile"><a href="#" class="link2">Остались вопросы? <br> Напиши мне !</a></p>
                         <img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo">
                     </div>
                 </div>
