Карточки - моб версия

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+< !DOCTYPE html>
     <html lang="ru">
 
     <head>
@@ -54,11 +54,11 @@
                     <div class="whoiam__container2"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
                             class="whoiam__imgmobil">
                         <p class="whoiam__p1">Бакалавр биологии</br>с отличием</p>
-                        <p class="whoiam__p1mobil">Бакалавр биологии с отличием</p>
-                        <img src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
-                        <p class="whoiam__p2">Аж 2(!) Научные работы</br>по теме кардиологии</p>
-                        <p class="whoiam__p2mobil">Аж 2(!) Научные работы по теме</br> кардиологии</p>
-                        <img src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
+                        <p class="whoiam__p1mobil">Бакалавр биологии с отличием</p><img
+                            src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
+                        <p class="whoiam__p2">Аж 2( !) Научные работы</br>по теме кардиологии</p>
+                        <p class="whoiam__p2mobil">Аж 2( !) Научные работы по теме</br>кардиологии</p><img
+                            src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
                     </div>
                     <div class="whoiam__container3"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
                             class="whoiam__imgmobil">
@@ -120,6 +120,57 @@
                         </div>
                     </div>
                 </div>
+                <div class="container-fluid price-cardmobil">
+                    <div class="d-flex row justify-content-center">
+                        <div class="card-1 mb-5 text-white price-cardmobil__border" style="width: 88vw; height: 110px;">
+                            <div class="row g-0">
+                                <div class="col-3 pt-3 ">
+                                    <div class="card-img"><img src="./assets/images/price/brain.svg" class="img-fluid"
+                                            alt="мозг">
+                                    </div>
+                                </div>
+                                <div class="col-9">
+                                    <div class="card-body">
+                                        <h5 class="card-title price__h5cardtext">Индивидуальные занятия</h5>
+                                        <p class="card-text price__cardtext2">2000 ₽ / 3000 ₽</br>60 мин / 90 мин</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-2 mb-5 text-white price-cardmobil__border" style="width: 88vw; height: 110px;">
+                            <div class="row g-0">
+                                <div class="col-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title price__h5cardtext">
+                                            Мини-группа
+                                        </h5>
+                                        <p class="card-text price__cardtext2">6900 ₽
+                                            </br>8 занятий</p>
+                                    </div>
+                                </div>
+                                <div class="col-5 pt-3" style="width: 70px ;">
+                                    <div class="card-img "><img src="./assets/images/price/cell.svg"
+                                            class="img-fluid d-flex justify-content-start " alt="биология"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-3 mb-5 text-white price-cardmobil__border" style="width: 88vw; height: 110px;">
+                            <div class="row g-0 d-flex justify-content-end">
+                                <div class="col-5 pt-3" style="width: 70px ;">
+                                    <div class="card-img"><img src="./assets/images/price/heart.svg"
+                                            class="img-fluid  d-flex justify-content-end " alt="сердце">
+                                    </div>
+                                </div>
+                                <div class="col-7">
+                                    <div class="card-body">
+                                        <h5 class="card-title price__h5cardtext">Макси-группа</h5>
+                                        <p class="card-text price__cardtext2">3600 ₽ </br>8 занятий</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="container-fluid price__buttons">
                     <div class="d-flex justify-content-evenly text-center mt-1"><button type="button"
                             class="price__button1 btn-dark rounded-pill text-white">Записаться</button><button
@@ -128,6 +179,11 @@
                             type="button" class="price__button3 btn-dark rounded-pill text-white">Записаться</button>
                     </div>
                 </div>
+
+                <div class="price__buttonmobil d-flex justify-content-center text-center mt-1">
+                    <button type="button" class="price__button btn-dark rounded-pill text-white">Записаться</button>
+                </div>
+
             </section>
             <section>
                 <div class="tryforfree">
@@ -135,16 +191,18 @@
                         <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
                         <p class="tryforfree__text1"><a href="#" class="link2">Бесплатный онлайн курс<br>&nbsp &nbsp
                                 &nbsp «Деление клетки»</a></p>
-                                <p class="tryforfree__text1__mobile"><a href="#" class="link2">Бесплатный онлайн курс<br> «Деление клетки»</a></p>
+                        <p class="tryforfree__text1__mobile"><a href="#" class="link2">Бесплатный онлайн
+                                курс<br>«Деление клетки»</a></p>
                         <p class="tryforfree__text2"><a href="#" class="link2">Конспекты,
                                 материалы,
                                 пособия и многое другое в моем телеграм канале</a></p>
-                                <p class="tryforfree__text2__mobile"><a href="#" class="link2">Конспекты,
-                                    материалы, <br>
-                                    пособия и многое другое<br>в моем телеграм канале</a></p>
+                        <p class="tryforfree__text2__mobile"><a href="#" class="link2">Конспекты,
+                                материалы,
+                                <br>пособия и многое другое<br>в моем телеграм канале</a></p>
                         <p class="tryforfree__text3"><a href="#" class="link2">Остались вопросы? Напиши мне !</a></p>
-                        <p class="tryforfree__text3__mobile"><a href="#" class="link2">Остались вопросы? <br> Напиши мне !</a></p>
-                        <img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы" class="tryforfree__photo">
+                        <p class="tryforfree__text3__mobile"><a href="#" class="link2">Остались вопросы? <br>Напиши мне
+                                !</a></p><img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы"
+                            class="tryforfree__photo">
                     </div>
                 </div>
             </section>
