--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
         <section>
             <div class="mainpage" id="mainpage">
                 <h1 class="mainpage__text">Мы просто сделаем это: возьмем и подготовимся к ЕГЭ на <span>80+</span>
-                </h1>
-                <a href="#tryforfree"><button class="mainpage__button">Попробовать бесплатно</button></a>
+                </h1><a href="#tryforfree"><button class="mainpage__button">Попробовать бесплатно</button></a>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры"
                         class="mainpage__photo"></div>
+                <div class="stendup stendup_2"></div>
 
-                <div id="stendup"><a href='#mainpage'><img class="stendup"
-                            src='./assets/images/whoiam/stendup.svg' alt='Кнопка «button»' /></a></div>
             </div>
         </section>
         <section class="whoiam" id="whoiam">
@@ -71,9 +69,7 @@
                     <p class="whoiam__p5">Готовлю ребят к экзаменам</br>уже больше 4 лет !</p>
                 </div>
             </div>
-
         </section>
-
         <section class="lessons" id="lessons">
             <h2>Занятия со мной</h2>
             <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png"
@@ -90,18 +86,18 @@
         <section class="lessons2">
             <div class="video">
                 <h2>Фрагменты видеоуроков</h2>
-                <div class="video__div"><video class="video__video"></video></div>
-                <button class="video__button">Следующий</button>
+                <div class="video__div"><video class="video__video"></video></div><button
+                    class="video__button">Следующий</button>
             </div>
             <div class="teoria">
                 <h2>Ёмкие и красочные конспекты</h2>
                 <div class="teoria__container">
-                <div class="button_left"><a><img src="./assets/images/lessons/botton_left.png"
-                            alt="Влево" onclick="button_left()"></a></div>
-                <div class="conspect"><img class="conspect_img" id="conspect"
-                        src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
-                <div class="button_right"><a><img
-                    onclick="button_right()" src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
+                    <div class="button_left"><a><img src="./assets/images/lessons/botton_left.png" alt="Влево"
+                                onclick="button_left()"></a></div>
+                    <div class="conspect"><img class="conspect_img" id="conspect"
+                            src="./assets/images/lessons/conspect1.jpeg" alt="Примеры конспектов"></div>
+                    <div class="button_right"><a><img onclick="button_right()"
+                                src="./assets/images/lessons/botton_right.png" alt="Вправо"></a></div>
                 </div>
             </div>
         </section>
@@ -211,11 +207,9 @@
         <div class="footer" id="footer">
             <div class="footer__container">
                 <div class="footer__container1">
-                    <p class="footer__logo">Bio with Mira</p>
-                    <a href="#whoiam" class="footer__a1 link3">Кто я?</a>
-                    <a href="#lessons" class="footer__a2 link3">Занятия со мной</a>
-                    <a href="#price" class="footer__a3 link3">Цены</a>
-                    <a href="#" class="footer__a4 link3">Успехи учеников</a>
+                    <p class="footer__logo">Bio with Mira</p><a href="#whoiam" class="footer__a1 link3">Кто я?</a><a
+                        href="#lessons" class="footer__a2 link3">Занятия со мной</a><a href="#price"
+                        class="footer__a3 link3">Цены</a><a href="#" class="footer__a4 link3">Успехи учеников</a>
                 </div>
                 <div class="footer__container2"><a class="footer__a5 link3"
                         href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by
@@ -236,18 +230,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
         integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
-    <script src="./assets/script/lessons_conspect"></script>
+    <script src="./assets/script/lessons_conspect.js"></script>
     <script src="./assets/script/mainpage.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-        $("#header, #footer, #mainpage").on("click","a", function (event) {
-        event.preventDefault();
-        var id = $(this).attr('href'),
-        top = $(id).offset().top;
-        $('body,html').animate({scrollTop: top}, 3000);
-        });
-      });
-      </script>
+    <script src="./assets/script/stendup.js"></script>
+    <script type="text/javascript">$(document).ready(function () {
+            $("#header, #footer, #mainpage").on("click", "a", function (event) {
+                event.preventDefault();
+                var id = $(this).attr('href'),
+                    top = $(id).offset().top;
+
+                $('body,html').animate({
+                    scrollTop: top
+                }
+
+                    , 3000);
+            }
+
+            );
+        }
+
+        );
+    </script>
 </body>
 
 </html>
