--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="header__container">
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
-                <div class="header__item1"><a href="#price" class="link1">Цены</a></div>
+                <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
                 <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
                 <div class="header__item5"><a href="#" class="link1">Меню</a></div>
             </div>
@@ -203,13 +203,15 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div class="footer" id="footer">
             <div class="footer__container">
                 <div class="footer__container1">
-                    <p class="footer__logo">Bio with Mira</p><a href="#whoiam" class="footer__a1 link3">Кто я?</a><a
-                        href="#lessons" class="footer__a2 link3">Занятия со мной</a><a href="#price"
-                        class="footer__a3 link3">Цены</a><a href="#" class="footer__a4 link3">Успехи учеников</a>
+                    <p class="footer__logo">Bio with Mira</p>
+                    <a href="#whoiam" class="footer__a1 link3">Кто я?</a>
+                    <a href="#lessons" class="footer__a2 link3">Занятия со мной</a>
+                    <a href="#price" class="footer__a3 link3">Цены</a>
+                    <a href="#" class="footer__a4 link3">Успехи учеников</a>
                 </div>
                 <div class="footer__container2"><a class="footer__a5 link3"
                         href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by
@@ -233,25 +235,7 @@
     <script src="./assets/script/lessons_conspect.js"></script>
     <script src="./assets/script/mainpage.js"></script>
     <script src="./assets/script/stendup.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#header, #footer, #mainpage").on("click", "a", function (event) {
-                event.preventDefault();
-                var id = $(this).attr('href'),
-                    top = $(id).offset().top;
-
-                $('body,html').animate({
-                    scrollTop: top
-                }
-
-                    , 3000);
-            }
-
-            );
-        }
-
-        );
-    </script>
+    <script src="./assets/script/animation.js"></script>
 </body>
 
 </html>
