--- a/index.html
+++ b/index.html
@@ -34,39 +34,39 @@
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
                 <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
                 <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
-                <div class="header__item5"><a href="#" class="link1">Меню</a></div>
             </div>
         </div>
     </header>
     <main>
-        <section>
-            <div class="mainpage" id="mainpage">
+        <section id="mainpage">
+            <div class="mainpage">
                 <h1 class="mainpage__text">Мы просто сделаем это: возьмем и подготовимся к ЕГЭ на <span>80+</span>
                 </h1><a href="#tryforfree"><button class="mainpage__button">Попробовать бесплатно</button></a>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры"
                         class="mainpage__photo"></div>
                 <div class="stendup stendup_2"></div>
-
             </div>
         </section>
-        <section class="whoiam" id="whoiam">
-            <h2 class="whoiam__h2">Кто я?</h2>
-            <div class="whoiam__container">
-                <div class="whoiam__container2"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
-                        class="whoiam__imgmobil">
-                    <p class="whoiam__p1">Бакалавр биологии</br>с отличием</p>
-                    <p class="whoiam__p1mobil">Бакалавр биологии с отличием</p><img
-                        src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
-                    <p class="whoiam__p2">Аж 2( !) Научные работы</br>по теме кардиологии</p>
-                    <p class="whoiam__p2mobil">Аж 2( !) Научные работы по теме</br>кардиологии</p><img
-                        src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
-                </div>
-                <div class="whoiam__container3"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
-                        class="whoiam__imgmobil">
-                    <p class="whoiam__p3">Занималась биоинформатикой</br>(собирала геномы)</p><img
-                        src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
-                    <p class="whoiam__p4">Закончила модуль по</br>Иммунологии от кафедры МГУ</p>
-                    <p class="whoiam__p5">Готовлю ребят к экзаменам</br>уже больше 4 лет !</p>
+        <section id="whoiam">
+            <div class="whoiam">
+                <h2 class="whoiam__h2">Кто я?</h2>
+                <div class="whoiam__container">
+                    <div class="whoiam__container2"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
+                            class="whoiam__imgmobil">
+                        <p class="whoiam__p1">Бакалавр биологии</br>с отличием</p>
+                        <p class="whoiam__p1mobil">Бакалавр биологии с отличием</p><img
+                            src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
+                        <p class="whoiam__p2">Аж 2( !) Научные работы</br>по теме кардиологии</p>
+                        <p class="whoiam__p2mobil">Аж 2( !) Научные работы по теме</br>кардиологии</p><img
+                            src="./assets/images/whoiam/mira.png" class="whoiam__img" alt="Мирослава">
+                    </div>
+                    <div class="whoiam__container3"><img src="./assets/images/whoiam/Ellipse.svg" alt="параграф"
+                            class="whoiam__imgmobil">
+                        <p class="whoiam__p3">Занималась биоинформатикой</br>(собирала геномы)</p><img
+                            src="./assets/images/whoiam/Ellipse.svg" alt="параграф" class="whoiam__imgmobil2">
+                        <p class="whoiam__p4">Закончила модуль по</br>Иммунологии от кафедры МГУ</p>
+                        <p class="whoiam__p5">Готовлю ребят к экзаменам</br>уже больше 4 лет !</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -207,11 +207,9 @@
         <div class="footer" id="footer">
             <div class="footer__container">
                 <div class="footer__container1">
-                    <p class="footer__logo">Bio with Mira</p>
-                    <a href="#whoiam" class="footer__a1 link3">Кто я?</a>
-                    <a href="#lessons" class="footer__a2 link3">Занятия со мной</a>
-                    <a href="#price" class="footer__a3 link3">Цены</a>
-                    <a href="#" class="footer__a4 link3">Успехи учеников</a>
+                    <p class="footer__logo">Bio with Mira</p><a href="#whoiam" class="footer__a1 link3">Кто я?</a><a
+                        href="#lessons" class="footer__a2 link3">Занятия со мной</a><a href="#price"
+                        class="footer__a3 link3">Цены</a><a href="#" class="footer__a4 link3">Успехи учеников</a>
                 </div>
                 <div class="footer__container2"><a class="footer__a5 link3"
                         href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by
