моб версия занятий

--- a/index.html
+++ b/index.html
@@ -73,19 +73,20 @@
             </div>
 
         </section>
-
+        <h2 class="lessons__h2">Занятия со мной</h2>
+        <div class="mob__container">
         <section class="lessons" id="lessons">
-            <h2>Занятия со мной</h2>
             <div class="lessons_img" id="lessons_img"><img src="./assets/images/lessons/platforma.png"
                     alt="Платформа с теорией"></div>
             <div class="lessons_text">
-                <ul>
+                <ul class="lessons__ul">
                     <li>Занятия онлайн в ZOOM</li>
                     <li>Удобная платформа</li>
-                    <li>Онлайн домашние задание</li>
+                    <li>Онлайн домашние задания</li>
                     <li>Поддержка от меня 24/7</li>
                 </ul>
             </div>
+
         </section>
         <section class="lessons2">
             <div class="video">
@@ -105,6 +106,7 @@
                 </div>
             </div>
         </section>
+    </div>
         <section id="price">
             <h2 class="price__h2">Цены</h2>
             <div class="container-fluid price-card">
