--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
                 <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
                 <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
+                <div class="header__item5"><a href="#" class="link1">Меню</a></div>
             </div>
         </div>
     </header>
@@ -41,7 +42,7 @@
         <section id="mainpage">
             <div class="mainpage">
                 <h1 class="mainpage__text">Мы просто сделаем это: возьмем и подготовимся к ЕГЭ на <span>80+</span>
-                </h1><a href="#tryforfree"><button class="mainpage__button">Попробовать бесплатно</button></a>
+                </h1><a href="#tryforfree" class="mainpage__button">Попробовать бесплатно</a>
                 <div class="mainpage__photodiv"><img src="./assets/images/mainpage/mira.png" alt="фото Миры"
                         class="mainpage__photo"></div>
                 <div class="stendup stendup_2"></div>
