--- a/index.html
+++ b/index.html
@@ -189,19 +189,18 @@
             <div class="tryforfree" id="tryforfree">
                 <div class="tryforfree__container">
                     <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
-                    <p class="tryforfree__text1"><a href="#" class="link2">Бесплатный онлайн курс<br>&nbsp &nbsp
+                    <p class="tryforfree__text1"><a href="https://iced-cast-edf.notion.site/1406847fa5434a03a54aa69eeb9588bb?v=35159a4c11b444f4b46784f58280d7f7" class="link2">Бесплатный онлайн курс<br>&nbsp &nbsp
                             &nbsp «Деление клетки»</a></p>
-                    <p class="tryforfree__text1__mobile"><a href="#" class="link2">Бесплатный онлайн
+                    <p class="tryforfree__text1__mobile"><a href="https://iced-cast-edf.notion.site/1406847fa5434a03a54aa69eeb9588bb?v=35159a4c11b444f4b46784f58280d7f7" class="link2">Бесплатный онлайн
                             курс<br>«Деление клетки»</a></p>
-                    <p class="tryforfree__text2"><a href="#" class="link2">Конспекты,
+                    <p class="tryforfree__text2"><a href="https://t.me/bio_mira1953" class="link2">Конспекты,
                             материалы,
                             пособия и многое другое в моем телеграм канале</a></p>
-                    <p class="tryforfree__text2__mobile"><a href="#" class="link2">Конспекты,
+                    <p class="tryforfree__text2__mobile"><a href="https://t.me/bio_mira1953" class="link2">Конспекты,
                             материалы,
                             <br>пособия и многое другое<br>в моем телеграм канале</a></p>
-                    <p class="tryforfree__text3"><a href="#" class="link2">Остались вопросы? Напиши мне !</a></p>
-                    <p class="tryforfree__text3__mobile"><a href="#" class="link2">Остались вопросы? <br>Напиши мне
-                            !</a></p><img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы"
+                    <p class="tryforfree__text3"><a href="https://t.me/nimb_son" class="link2">Остались вопросы? Напиши мне!</a></p>
+                    <p class="tryforfree__text3__mobile"><a href="https://t.me/nimb_son" class="link2">Остались вопросы? <br>Напиши мне!</a></p><img src="./assets/images/tryforfree/mira.png" alt="Фото Мирославы"
                         class="tryforfree__photo">
                 </div>
             </div>
