--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/style/lessons.css">
     <link rel="stylesheet" href="./assets/style/whoiam.css">
     <link rel="stylesheet" href="./assets/style/price.css">
+    <link rel="stylesheet" href="./assets/style/otzivy.css">
     <link rel="stylesheet" href="./assets/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -186,6 +187,22 @@
                     class="price__button btn-dark rounded-pill text-white">Записаться</button></div>
         </section>
         <section>
+            <div class="otzivy" id="otzivy">
+                <h2 class="otzivy__h2">Успехи учеников</h2>
+                <div class="otzivy__container">
+                <div class="otzivy__buttonleft"><img src="./assets/images/otzivy/button_left.png" alt="Влево"></div>
+                <div class="otzivy__keys1"><img src="./assets/images/otzivy/keys1.JPG" alt="первый отзыв" class="otzivy__keys1_image"></div>
+                <div class="otzivy__keys2"><img src="./assets/images/otzivy/keys2.jpg" alt="второй отзыв" class="otzivy__keys2_image"></div>
+                <div class="otzivy__keys3"><img src="./assets/images/otzivy/keys3.jpg" alt="третий отзыв" class="otzivy__keys3_image"></div>
+                <div class="otzivy__buttonright"><img src="./assets/images/otzivy/button_right.png" alt="Вправо"></div>
+            </div>
+            <div class="otzivy__container2">
+                <a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a>
+                <a href="#" class="otzivy__link2">Еще больше отзывов в VK</a>
+            </div>
+        </div>
+        </section>
+        <section>
             <div class="tryforfree" id="tryforfree">
                 <div class="tryforfree__container">
                     <h2 class="tryforfree__h2">Попробуй бесплатно</h2>
@@ -237,6 +254,7 @@
     <script src="./assets/script/mainpage.js"></script>
     <script src="./assets/script/stendup.js"></script>
     <script src="./assets/script/animation.js"></script>
+    <script src="./assets/script/otzivy.js"></script>
 </body>
 
 </html>
