--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
                 <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
-                <div class="header__item4"><a href="#" class="link1">Успехи учеников</a></div>
+                <div class="header__item4"><a href="#otzivy" class="link1">Успехи учеников</a></div>
                 <div class="header__item5"><a href="#" class="link1">Меню</a></div>
             </div>
         </div>
@@ -194,15 +194,15 @@
             <div class="otzivy" id="otzivy">
                 <h2 class="otzivy__h2">Успехи учеников</h2>
                 <div class="otzivy__container">
-                <div class="otzivy__buttonleft"><img src="./assets/images/otzivy/button_left.png" alt="Влево"></div>
+                <div><img src="./assets/images/otzivy/button_left.png" class="otzivy__buttonleft" alt="Влево"></div>
                 <div class="otzivy__keys1"><img src="./assets/images/otzivy/keys1.JPG" alt="первый отзыв" class="otzivy__keys1_image"></div>
                 <div class="otzivy__keys2"><img src="./assets/images/otzivy/keys2.jpg" alt="второй отзыв" class="otzivy__keys2_image"></div>
                 <div class="otzivy__keys3"><img src="./assets/images/otzivy/keys3.jpg" alt="третий отзыв" class="otzivy__keys3_image"></div>
-                <div class="otzivy__buttonright"><img src="./assets/images/otzivy/button_right.png" alt="Вправо"></div>
+                <div><img src="./assets/images/otzivy/button_right.png" class="otzivy__buttonright" alt="Вправо"></div>
             </div>
             <div class="otzivy__container2">
                 <a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a>
-                <a href="#" class="otzivy__link2">Еще больше отзывов в VK</a>
+                <a href="https://vk.com/album-215271032_285644111" class="otzivy__link2">Еще больше отзывов в VK</a>
             </div>
         </div>
         </section>
@@ -239,7 +239,7 @@
                 <div class="footer__container1">
                     <p class="footer__logo">Bio with Mira</p><a href="#whoiam" class="footer__a1 link3">Кто я?</a><a
                         href="#lessons" class="footer__a2 link3">Занятия со мной</a><a href="#price"
-                        class="footer__a3 link3">Цены</a><a href="#" class="footer__a4 link3">Успехи учеников</a>
+                        class="footer__a3 link3">Цены</a><a href="#otzivy" class="footer__a4 link3">Успехи учеников</a>
                 </div>
                 <div class="footer__container2"><a class="footer__a5 link3"
                         href="https://www.flaticon.com/free-icons/cell" title="cell icons">Cell icons created by
