--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
             <div class="otzivy" id="otzivy">
                 <h2 class="otzivy__h2">Успехи учеников</h2>
                 <div class="otzivy__container">
-                <div><img src="./assets/images/otzivy/button_left.png" class="otzivy__buttonleft" alt="Влево"></div>
-                <div class="otzivy__keys1"><img src="./assets/images/otzivy/keys1.JPG" alt="первый отзыв" class="otzivy__keys1_image"></div>
-                <div class="otzivy__keys2"><img src="./assets/images/otzivy/keys2.jpg" alt="второй отзыв" class="otzivy__keys2_image"></div>
-                <div class="otzivy__keys3"><img src="./assets/images/otzivy/keys3.jpg" alt="третий отзыв" class="otzivy__keys3_image"></div>
-                <div><img src="./assets/images/otzivy/button_right.png" class="otzivy__buttonright" alt="Вправо"></div>
+                <div><a><img src="./assets/images/otzivy/button_left.png" class="otzivy__buttonleft" alt="Влево" onclick="leftClick()"></a></div>
+                <div class="otzivy__keys1"><img src="./assets/images/otzivy/keys1.JPG" alt="первый отзыв" id="keys1" class="otzivy__keys1_image"></div>
+                <div class="otzivy__keys2"><img src="./assets/images/otzivy/keys2.jpg" alt="второй отзыв" id="keys2" class="otzivy__keys2_image"></div>
+                <div class="otzivy__keys3"><img src="./assets/images/otzivy/keys3.jpg" alt="третий отзыв" id="keys3" class="otzivy__keys3_image"></div>
+                <div><a><img src="./assets/images/otzivy/button_right.png" class="otzivy__buttonright" alt="Вправо" onclick="rightClick()"></a></div>
             </div>
             <div class="otzivy__container2">
                 <a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a>
