--- a/index.html
+++ b/index.html
@@ -30,13 +30,23 @@
     <header>
         <div class="header" id="header">
             <div class="header__logo">Bio with Mira</div>
-            <div class="header__container">
+            <nav class="header__container">
                 <div class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></div>
                 <div class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></div>
                 <div class="header__item3"><a href="#price" class="link1">Цены</a></div>
                 <div class="header__item4"><a href="#otzivy" class="link1">Успехи учеников</a></div>
+                
+            </nav>
+            <nav class="header__mobilecontainer">
                 <div class="header__item5"><a href="#" class="link1">Меню</a></div>
-            </div>
+                <ul>
+                <li class="header__item1"><a href="#whoiam" class="link1">Кто я?</a></li>
+                <li class="header__item2"><a href="#lessons" class="link1">Занятия со мной</a></li>
+                <li class="header__item3"><a href="#price" class="link1">Цены</a></li>
+                <li class="header__item4"><a href="#otzivy" class="link1">Успехи учеников</a></li>
+
+            </ul>
+            </nav>
         </div>
     </header>
     <main>
@@ -205,6 +215,13 @@
                 <a href="https://vk.com/album-215271032_285644111" class="otzivy__link2">Еще больше отзывов в VK</a>
             </div>
         </div>
+        </section>
+        <section>
+            <div class="otzivy__mobilecontainer">
+                <a href="#" class="otzivy__link1">Видео-отзывы на YouTube</a>
+                <div class="otzivy__keys1"><img src="./assets/images/otzivy/keys1.JPG" alt="первый отзыв" id="mobilekeys" class="otzivy__keys1_image"></div>
+                <a href="https://vk.com/album-215271032_285644111" class="otzivy__link2">Еще больше отзывов в VK</a>
+            </div>
         </section>
         <section>
             <div class="tryforfree" id="tryforfree">
